# WeCycleCpp

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md  WeCycle.sln
Firebase_libs/Debug/: firebase_admob.lib  firebase_analytics.lib  firebase_dynamic_links.lib  firebase_functions.lib  firebase_instance_id.lib  firebase_invites.lib  firebase_messaging.lib
WeCycle/: Account.cpp  Account.h  AccountValueListener.cpp  AccountValueListener.h  Authentication.cpp  Authentication.h  CMakeLists.txt  Crypto.cpp  Crypto.h  DataManager.cpp  DataManager.h  EmailValueListener.cpp  EmailValueListener.h  FirebaseManager.cpp  FirebaseManager.h  PlayerAchievements.cpp  PlayerAchievements.h  PushableObject.cpp  PushableObject.h  Rank.cpp  Rank.h  StorageManager.cpp  StorageManager.h  UID.cpp  UID.h  WeCycle.cpp  WeCycle.vcxproj  WeCycle.vcxproj.filters  main.c
WeCycle/c-headers-wrappers/: AccountWrapper.cpp  AccountWrapper.hpp  AuthenticationWrapper.cpp  AuthenticationWrapper.hpp  DataManagerWrapper.cpp  DataManagerWrapper.hpp  FirebaseManagerWrapper.cpp  FirebaseManagerWrapper.hpp  PushableObjectWrapper.cpp  PushableObjectWrapper.hpp  StorageManagerWrapper.cpp  StorageManagerWrapper.hpp  UIDWrapper.cpp  UIDWrapper.hpp
